# hermes

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  hermes.hpp  logging.hpp  rpcs.hpp  test_client.cpp  test_server.cpp
.github/workflows/: build-image-ci.yml
cmake/: FindMargo-hg-shim.cmake  FindMercury.cmake  hermes_flags.cmake  hermes_options.cmake
docker/: Dockerfile
examples/: CMakeLists.txt  rpcs.hpp  rpcs.v2.hpp  test_client.cpp  test_server.cpp
examples/00_hello_world/: CMakeLists.txt  client.cpp  rpcs.cpp  rpcs.hpp  server.cpp
examples/01_send_buffer/: CMakeLists.txt  client.cpp  lipsum.txt  rpcs.hpp  server.cpp
examples/02_recv_buffer/: CMakeLists.txt  client.cpp  rpcs.cpp  rpcs.hpp  server.cpp
examples/common/: CMakeLists.txt  common.hpp  logging_functions.cpp  logging_functions.hpp
hermes/: async_engine.hpp  bulk.hpp  event.hpp  messages.hpp  request.hpp
include/: hermes.hpp
include/hermes/: access_mode.hpp  async_engine.hpp  buffer.hpp  endpoint.hpp  exposed_memory.hpp  handle.hpp  logging.hpp  make_unique.hpp  messages.hpp  options.hpp  request.hpp  transport.hpp
include/hermes/detail/: address.hpp  execution_context.hpp  margo_compatibility.hpp  mercury_utils.hpp  request_descriptor.hpp  request_registrar.hpp  request_status.hpp
scripts/: runner.sh
tests/: CMakeLists.txt
tools/hgc/: hgc.py
